--- a/package.json
+++ b/package.json
@@ -10,13 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.2.8",
+    "@base-ui-components/react": "^1.0.0-rc.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-cli": "^2.4.1",
     "@tauri-apps/plugin-clipboard-manager": "^2.3.2",
