--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 base64 = "0.21"
 tokio = { version = "1", features = ["time"] }
+image = { version = "0.25", default-features = false, features = ["png"] }
+arboard = "3"
