--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,8 +19,6 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
-tauri-plugin-clipboard-manager = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 tauri-plugin-store = "2"
@@ -31,4 +29,4 @@ serde_json = "1"
 base64 = "0.21"
 tokio = { version = "1", features = ["time"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
-arboard = "3"
+arboard = { version = "3", features = ["wayland-data-control"] }
