--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,5 +28,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 base64 = "0.21"
 tokio = { version = "1", features = ["time"] }
-image = { version = "0.25", default-features = false, features = ["png"] }
+image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
 arboard = { version = "3", features = ["wayland-data-control"] }
