--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,4 @@ base64 = "0.21"
 tokio = { version = "1", features = ["time"] }
 image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
 arboard = { version = "3", features = ["wayland-data-control"] }
+tauri-plugin-shell = "2.3.5"
