--- a/src/lib/default-config.json
+++ b/src/lib/default-config.json
@@ -145,25 +145,25 @@
     {
       "name": "default",
       "colors": [
-        "#FF6B6B",
-        "#FF9F43",
-        "#FFE066",
-        "#6BCB77",
         "#4D96FF",
-        "#9B59B6",
-        "#FF6B9D"
+        "#6BCB77",
+        "#FFE066",
+        "#FF9F43",
+        "#FF6B6B",
+        "#FF6B9D",
+        "#9B59B6"
       ]
     },
     {
       "name": "pastel",
       "colors": [
-        "#FFB3BA",
-        "#FFDFBA",
-        "#FFFFBA",
-        "#BAFFC9",
         "#BAE1FF",
-        "#E2BAFF",
-        "#FFB3E6"
+        "#BAFFC9",
+        "#FFFFBA",
+        "#FFDFBA",
+        "#FFB3BA",
+        "#FFB3E6",
+        "#E2BAFF"
       ]
     },
     {
