--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OmniMark",
+  "name": "omnimark",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-rc.0",
@@ -28,14 +30,20 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.2.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^10.0.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "globals": "^17.3.0",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.54.0",
     "vite": "^7.0.4",
     "vite-tsconfig-paths": "^6.1.0"
   }
