--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "omnimark"
+name = "ursamarkup"
 version = "0.1.0"
 description = "An opinionated cross-platform tool for marking up and highlighting images"
 authors = ["BasicallyPolaris"]
@@ -14,7 +14,7 @@ strip = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "omnimark_lib"
+name = "ursamarkup_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
