chore(versions): update versions in different config files to match the v1.0.0-beta release

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ursamarkup"
-version = "0.1.0"
-description = "An opinionated cross-platform tool for marking up and highlighting images"
+version = "1.0.0"
+description = "An opinionated cross-platform tool for marking up images"
 authors = ["BasicallyPolaris"]
 edition = "2021"
 
