--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ursamarkup"
-version = "1.0.0"
+version = "1.0.0-beta.2"
 description = "An opinionated cross-platform tool for marking up images"
 authors = ["BasicallyPolaris"]
 edition = "2021"
